--- a/templates/pages/MentionsLegales.html.twig
+++ b/templates/pages/MentionsLegales.html.twig
@@ -8,18 +8,88 @@
 
 {% block body %}
     <h1>Mentions légales</h1>
+
+    <h1>SITE INTERNET</h1>
+
+    <h2>Propriétaire</h2>
+    <p>Lymphobank
+    <br>
+    S.A.S.U. au capital de 110.000 euros 
+    <br>
+    Siège social : 8 Rue du Docteur Jean François Xavier Girod
+    <br>
+    25000 BESANCON
+    <br>
+    Tél : 03 81 61 57 08
+    <br>
+    SIRET n° 830  555 603 00018</p>
+    
+
+    <h2>Création du site internet</h2>
+    <p>Site réalisé par <a href="https://www.linkedin.com/in/oscar-palissot-aa4000203/" target="_blank" rel="noopener noreferrer">Oscar Palissot</a></p>
+
+    <h2>Hébergement du site internet</h2>
+    <p>Infomaniak Network SA
+    <br>
+    Rue Eugène-Marziano, 25
+    <br>
+    CH 1227 Genève
+    <br>
+    Suisse
+    <br>
+    <a href="https://support.infomaniak.com" target="_blank" rel="noopener noreferrer">https://support.infomaniak.com</a>
+    </p>
+    
+    <h1>Données personnelles</h1>
+    <p>Conformément au Règlement Général de Protection des Données (Règlement Européen 2016/679 du 27 avril 2016 ; RGPD), nous vous informons des points suivants concernant l’utilisation de vos données personnelles.</p>
+    
+    <h2>Enregistrement des données personnelles</h2>
+    <p class="TwoColumnsText">Les données personnelles suivantes sont enregistrées lors de l’envoi d’un courrier électronique via la page de contact sont le nom, prénom et adresse électronique.
+    <br>
+    Aucun cookie n’est enregistré lors de la consultation du site, même/sauf en cas d’envoi de courrier électronique. Vous pouvez désactiver l’enregistrement du cookie en cliquant sur le bouton vert "Gestion des services" situé en haut à droite du site, auquel cas il ne sera pas possible de nous contacter via le site.</p>
+    
+    <h2>Utilisation des données personnelles</h2>
+    <p class="TwoColumnsText">Nous nous engageons à ne pas divulguer à des tiers les informations que vous nous communiquez. Celles-ci sont confidentielles et ne seront utilisées que pour les besoins du service.
+    Les données personnelles communiquées lors de l’envoi d’un message sont utilisées uniquement pour vous répondre.</p>
+    
+    <h2>Durée de conservation des données personnelles</h2>
+    <p class="TwoColumnsText">Les données personnelles sont conservées durant le temps nécessaire à l’échange d’informations avec vous.</p>
+    
+    
+    <h2>Droit d’accès et de rectification</h2>
+    <p class="TwoColumnsText">Le site répond à la réglementation relative à l’informatique, aux fichiers et aux libertés telle que définie par la loi n° 78-17 du 6 janvier 1978. Vous disposez, pour ce qui concerne les données personnelles collectées lors de votre visite sur le site d‘un droit d’accès, de modification, de rectification, et de suppression des données conformément à la loi française. Ces droits peuvent être exercés auprès de :
+    <br>
+    Lymphobank S.A.S.U.
+    <br>
+    s/c Etablissement Français du Sang Bourgogne/Franche-Comté
+    <br>
+    8 rue du Dr Jean-François-Xavier Girod
+    <br>
+    25000 Besançon
+    <br>
+    Tel : 03 81 615 708
+    <br>
+    Adresse électronique : eric.robinet@lymphobank.fr ou contact@lymphobank.fr</p>
+
+    <h1>Propriété intellectuelle</h1>
+    <h2>Contrefaçon</h2>
+    <p class="TwoColumnsText">Toute reproduction ou représentation, en tout ou partie, à d'autres fins sur un quelconque support est interdite. Le non-respect de cette interdiction constitue une contrefaçon pouvant engager la responsabilité civile et pénale du contrefacteur. Les informations contenues dans ce service sont non contractuelles et sujettes à modification sans préavis.</p>
+    
+
+    
+
     <h2>Crédits photos et icones</h2>
-    <p>
-        <div>Icônes conçues par <a href="https://www.freepik.com" title="Freepik" target="_blank" rel="noopener noreferrer">Freepik</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26" target="_blank" rel="noopener noreferrer">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noopener noreferrer">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/prosymbols" title="Prosymbols" target="_blank" rel="noopener noreferrer">Prosymbols</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://creativemarket.com/Becris" title="Becris" target="_blank" rel="noopener noreferrer">Becris</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons" target="_blank" rel="noopener noreferrer">Flat Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio" target="_blank" rel="noopener noreferrer">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/surang" title="surang" target="_blank" rel="noopener noreferrer">surang</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://roundicons.com/" title="Roundicons"target="_blank" rel="noopener noreferrer">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
-        <div>Icons made by <a href="" title="Those Icons" target="_blank" rel="noopener noreferrer">Those Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+    <p class="TwoColumnsText">
+        Charte d'engagement: Pixabay, pixabay.com
+        (Brenkee; Burtontherunner; C_Scott; Ellemclin; Engin_Akyurt; Free-Photos; Greyerbaby; Nastya_gepp; Stevenmeans67; 2229018) 
+        <br>
+        Lettre d’information : <a href="www.stock.adobe.com" target="_blank" rel="noopener noreferrer">www.stock.adobe.com</a> (BillionPhotos.com ; Subbotina Anna ; Kzenon ; sola_sola ; luchschenF ; catalin) & www.istockphoto.com (Liudmila_Fadzeyeva) 
+        <br>
+        Site internet : <a href="www.stock.adobe.com" target="_blank" rel="noopener noreferrer">www.stock.adobe.com</a> (BillionPhotos.com ; ashtproductions ; Photographee.eu ; luckybusiness) 
+        <br>
+        Autres photos: Lymphobank
+        <br>
+        Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/prosymbols" title="Prosymbols" target="_blank" rel="noopener noreferrer">Prosymbols</a>, <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26" target="_blank" rel="noopener noreferrer">Icongeek26</a>, <a href="https://www.freepik.com" title="Freepik" target="_blank" rel="noopener noreferrer">Freepik</a>, <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noopener noreferrer">Eucalyp</a>, <a href="https://creativemarket.com/Becris" title="Becris" target="_blank" rel="noopener noreferrer">Becris</a>, <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons" target="_blank" rel="noopener noreferrer">Flat Icons</a>, <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio" target="_blank" rel="noopener noreferrer">photo3idea_studio</a>, <a href="https://www.flaticon.com/authors/surang" title="surang" target="_blank" rel="noopener noreferrer">surang</a>, <a href="https://roundicons.com/" title="Roundicons"target="_blank" rel="noopener noreferrer">Roundicons</a>, <a href="" title="Those Icons" target="_blank" rel="noopener noreferrer">Those Icons</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a>
     </p>
 {% endblock %}
 
