--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -13,7 +13,7 @@
     <h1>Pourquoi donner ?</h1>
     <button class="accordion"><p class="accordionTitle">1.  Sauver des vies</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p class="TwoColumnsText">On compte environ <span class="underline">2000 personnes</span> qui, chaque année, ont besoin d’une <span class="tooltip">greffe <span class="tooltipText">La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.</span></span> de <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+        <img class="illustrationAccordeon" src={{ asset ('img/Vie.jpeg')}}><p class="TwoColumnsText">On compte environ <span class="underline">2000 personnes</span> qui, chaque année, ont besoin d’une <span class="tooltip">greffe <span class="tooltipText">La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.</span></span> de <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
         -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
         <br><br>
         -  Globules blancs :ils assurent la défense du corps contre les virus et les bactéries
@@ -39,7 +39,7 @@
 
     <button class="accordion"><p class="accordionTitle">2.	Aider la recherche</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p class="TwoColumnsText">
+        <img class="illustrationAccordeon" src={{ asset ('img/Science.jpeg')}}><p class="TwoColumnsText">
         Faire un don de sang de cordon à usage scientifique, <span class="underline">c’est aider la recherche</span>.
         <br><br>
         Le don de sang de cordon à usage scientifique mais aussi de cordon ombilical ou de placenta permet d’isoler diverses cellules qui ne peuvent pas (ou très difficilement) être prélevées sur des donneurs adultes ou qui présentent des caractéristiques uniques, différentes de celles des cellules adultes, ce qui les rend précieuses pour la recherche.
@@ -48,7 +48,7 @@
 
     <button class="accordion"><p class="accordionTitle">3.	Un acte responsable et solidaire</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p class="TwoColumnsText">L’acte de donner son sang de cordon est un <span class="underline">acte citoyen, généreux, solidaire et important</span> qui peut aider de nombreux patients. Cette expérience riche s’inscrit dans une dynamique de partage tant pour la donneuse que pour les patients. </p>
+        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.jpeg')}}><p class="TwoColumnsText">L’acte de donner son sang de cordon est un <span class="underline">acte citoyen, généreux, solidaire et important</span> qui peut aider de nombreux patients. Cette expérience riche s’inscrit dans une dynamique de partage tant pour la donneuse que pour les patients. </p>
     </div>
 
     <h1>Les principes du don de sang de cordon</h1>
