--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -12,16 +12,16 @@
 {% block body %}
     <h1>Qui sommes-nous ?</h1>
     <h2>Notre histoire</h2>
-    <p><a href="/" target="_blank" rel="noopener noreferrer">Mon-cordon-precieux.fr</a> est un site destiné à vous informer sur le don de sang placentaire (également appelé don de sang de cordon) pour un usage scientifique.
+    <p class="TwoColumnsText"><a href="/" target="_blank" rel="noopener noreferrer">Mon-cordon-precieux.fr</a> est un site destiné à vous informer sur le don de sang placentaire (également appelé don de sang de cordon) pour un usage scientifique.
     <br><br>
     LYMPHOBANK est une société de biotechnologie française créée à Besançon en 2017 par Éric Robinet, ancien chercheur de l'Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC) dans le but de développer un traitement innovant du cancer du foie. Afin de financer ce projet de recherche, LYMPHOBANK mène en parallèle une activité industrielle visant à fournir des produits issus du sang de donneurs de sang adultes ou de sang de cordon à des laboratoires de recherche.
     </p>
     <h2>Notre mission</h2>
-    <p>‘’Accompagner la recherche, c’est accompagner la vie’’ : tel est notre credo. Nous souhaitons être un partenaire de référence dans la réalisation des projets de recherche de nos clients en leur faisant gagner du temps et de la sérénité pour l’obtention de produits fiables issus du sang.</p>
+    <p class="TwoColumnsText">‘’Accompagner la recherche, c’est accompagner la vie’’ : tel est notre credo. Nous souhaitons être un partenaire de référence dans la réalisation des projets de recherche de nos clients en leur faisant gagner du temps et de la sérénité pour l’obtention de produits fiables issus du sang.</p>
     <h2>Nos valeurs</h2>
-    <p><strong>Bien qu’étant une société privée, nos valeurs sont basées sur les valeurs du don du sang en France : </strong></p>
+    <p>Bien qu’étant une société privée, nos valeurs sont basées sur les valeurs du don du sang en France :</p>
     <div class="cadre">
-        <h2>Donner son sang de cordon, c'est GÉANT !</h2>
+        <h2 class="titleGeant">Donner son sang de cordon, c'est GÉANT !</h2>
         <div class="schemaGeant">
             <div class="geantLetter">
                 <h2><div class="underline">G</div>ratuit</h2>
@@ -69,9 +69,9 @@
             </div>
         </div>
     </div>
-    <p><strong>Les résultats de notre activité industrielle sont totalement réinvestis dans notre activité de Recherche & Développement, qui a vocation à développer une activité innovante <span class="tooltip">d'immunothérapie<span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span><span class="tooltip"> du cancer.<span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span></strong></p>
+    <p>Les résultats de notre activité industrielle sont totalement réinvestis dans notre activité de Recherche & Développement, qui a vocation à développer une activité innovante <span class="tooltip">d'immunothérapie <span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span> <span class="tooltip">du cancer.<span class="tooltipText"> utilisation de cellules immunitaires comme médicament pour stimuler les défenses de l'organisme contre le cancer</span></span></p>
     <h2>Nos engagements</h2>
-    <p>Soyons clairs : les donneurs et les donneuses donnent leur sang, adulte ou placentaire, pour sauver des vies ou pour faire avancer la recherche. Ils ne donnent pas pour qu’une société privée gagne de l’argent ‘’sur leur dos’’.
+    <p class="TwoColumnsText">Soyons clairs : les donneurs et les donneuses donnent leur sang, adulte ou placentaire, pour sauver des vies ou pour faire avancer la recherche. Ils ne donnent pas pour qu’une société privée gagne de l’argent ‘’sur leur dos’’.
     <br><br>
     Notre engagement de non-profit personnel signifie que les bénéfices réalisés par la société, au travers de son activité industrielle liée au don du sang, sont intégralement réutilisés pour le financement du projet de recherche qu’elle mène en collaboration avec l’EFS-BFC : aucun dividende n’est reversé au Président, fondateur de la société, ni à d’éventuels associés ou futurs investisseurs.
     <br><br>
