--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -21,7 +21,7 @@
     
     <div class="content">
         <h1 class="homeTitle">Soutenez la recherche biomédicale par votre don de sang de cordon.</h1>
-        <h2 class="homeText">Lymphobank est une socièté de biotechnologie qui accompagne la recherche par la cession de produits issus du cordon ombilical ou du placenta.</h2>
+        <h2 class="homeText">Lymphobank est une société de biotechnologie qui accompagne la recherche par la cession de produits issus du cordon ombilical ou du placenta.</h2>
 
         <div class="cadre">
             <h2>Donner son sang de cordon, c'est GÉANT !</h2>
