--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -92,7 +92,7 @@
         </div>
     </div>
     <h2>Le don de sang de cordon à usage scientifique</h2>
-    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/scientifique.jpeg')}}><p class="TwoColumnsText">Les maternités partenaires de LYMPHOBANK proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
+    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/scientifique.jpeg')}}><p class="TwoColumnsText">Les maternités partenaires de Lymphobank proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
     <br>
     Donner son sang de cordon, c’est aider la recherche !
     </p></div>
