--- a/templates/pages/Quand.html.twig
+++ b/templates/pages/Quand.html.twig
@@ -39,7 +39,7 @@
     <h2>Avant le don</h2>
     <p>Vous pouvez faire part de votre motivation à donner votre sang de cordon lors de vos rendez-vous médicaux avec votre médecin référent/ sage-femme ou gynécologue. Il/elle se chargera de répondre à toutes vos questions concernant le don de sang de cordon, le déroulement du prélèvement et son devenir. Une fiche d’information ainsi qu’un document de consentement (en 3 exemplaires) vous seront fournis.
     <br><br>
-    Si vous souhaitez des informations complémentaires, contactez LYMPHOBANK. (Renvoyer à contact footer)
+    Si vous souhaitez des informations complémentaires, contactez Lymphobank. (Renvoyer à contact footer)
     <br><br>
     Selon le don que vous souhaitez effectuer, une sage-femme vous réorientera dans une maternité adéquate puisque seules quelques maternités offrent la possibilité de prélever le sang de cordon, certaines pour un usage thérapeutique, d’autres pour un usage scientifique.
     </p>
@@ -62,9 +62,9 @@
     <h2>Après l’accouchement</h2>
     <p>Le prélèvement de sang de cordon n’entrave aucunement la prise en charge de votre bébé et de vous-même. L’accompagnement reste le même que le prélèvement ait lieu ou non, la sage-femme vous accordera la même attention dans tous les cas. 
     <br><br>
-    Dans le cas où votre prise de sang se révélerait positive, vous serez contactée par votre maternité et l’EFS demandera à LYMPHOBANK de procéder à la destruction du don de sang de cordon. Vous recevrez alors un document prouvant que le prélèvement a bien été détruit. 
+    Dans le cas où votre prise de sang se révélerait positive, vous serez contactée par votre maternité et l’EFS demandera à Lymphobank de procéder à la destruction du don de sang de cordon. Vous recevrez alors un document prouvant que le prélèvement a bien été détruit. 
     <br><br>
-    Nous pouvons vous renseigner sur l’usage scientifique qui a été fait de votre don. Pour cela, vous pouvez vous adresser à l’<span class="tooltip">EFS <span class="tooltipText">03 81 61 56 15</span></span>  qui nous transmettra votre requête et qui vous transmettra notre réponse. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à LYMPHOBANK qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre.
+    Nous pouvons vous renseigner sur l’usage scientifique qui a été fait de votre don. Pour cela, vous pouvez vous adresser à l’<span class="tooltip">EFS <span class="tooltipText">03 81 61 56 15</span></span>  qui nous transmettra votre requête et qui vous transmettra notre réponse. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à Lymphobank qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre.
     </p>
     
 
