--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -14,7 +14,7 @@
     <h2>Notre histoire</h2>
     <p class="TwoColumnsText"><a href="/" target="_blank" rel="noopener noreferrer">Mon-cordon-precieux.fr</a> est un site destiné à vous informer sur le don de sang placentaire (également appelé don de sang de cordon) pour un usage scientifique.
     <br><br>
-    LYMPHOBANK est une société de biotechnologie française créée à Besançon en 2017 par Éric Robinet, ancien chercheur de l'Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC) dans le but de développer un traitement innovant du cancer du foie. Afin de financer ce projet de recherche, LYMPHOBANK mène en parallèle une activité industrielle visant à fournir des produits issus du sang de donneurs de sang adultes ou de sang de cordon à des laboratoires de recherche.
+    Lymphobank est une société de biotechnologie française créée à Besançon en 2017 par Éric Robinet, ancien chercheur de l'Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC) dans le but de développer un traitement innovant du cancer du foie. Afin de financer ce projet de recherche, Lymphobank mène en parallèle une activité industrielle visant à fournir des produits issus du sang de donneurs de sang adultes ou de sang de cordon à des laboratoires de recherche.
     </p>
     <h2>Notre mission</h2>
     <p class="TwoColumnsText">‘’Accompagner la recherche, c’est accompagner la vie’’ : tel est notre credo. Nous souhaitons être un partenaire de référence dans la réalisation des projets de recherche de nos clients en leur faisant gagner du temps et de la sérénité pour l’obtention de produits fiables issus du sang.</p>
