--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -109,8 +109,14 @@
             </div>
         </div>
 
-        <h2>logo</h2>
-        
+        <h1>Partenaires :</h1>
+        <div id="logoPartenaire">
+            <img class="icon" src={{ asset ('img/logoPartenaires/region.png')}}>
+            <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
+            {% for etablissement in etablissements %}
+            
+            {% endfor %}
+        </div>
         
 
         <h1>Réseau de maternités partenaires :</h1>
