--- a/assets/styles/comment.scss
+++ b/assets/styles/comment.scss
@@ -64,6 +64,7 @@ $kaki: rgb(180, 139, 10);
 #reseau{
     position: static;
     width: auto;
+    height: 50px;
     margin-top: 20px;
     padding: 0 0.5em;
     background-color: $pastel;
