--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -10,6 +10,7 @@
 
         {% block stylesheets %}{% endblock %}
         {{ encore_entry_link_tags('scss/admin') }}
+        {{ encore_entry_link_tags('scss/paginationAdmin') }}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
 
     </head>
