--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -85,7 +85,7 @@
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="tooltipGeant">
                 <div class="iconSchema"><h2 class="nb">4.</h2><img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-                <h2>Le sang est recueilli par gravité dans la poche pendant 2 à 4 minnutes</h2></div>
+                <h2>Le sang est recueilli par gravité dans la poche pendant 2 à 4 minutes</h2></div>
                 <span class="tooltipGeantText">Le prélèvement de sang de cordon se déroule dans les quelques minutes qui suivent l’accouchement et durera moins de 5 minutes. Le cordon et/ou le placenta peuvent éventuellement être recueillis pour un usage scientifique, après que le placenta ait été expulsé.
                 </span>
             </div>
