--- a/templates/admin/actus/EditActu.html.twig
+++ b/templates/admin/actus/EditActu.html.twig
@@ -8,7 +8,11 @@
 {% block body %}
     <div class="container mt-4">
         <h1>Modifier les informations de l'actualité</h1>
-        <p>photo enregistrée: {{actu.filename}}</p>
+        {% if actu.filename %}
+            <img class="imgSelect" src={{ vich_uploader_asset(actu, 'imageFile')}}>
+        {% else %}
+            <p>Pas de photo enregistrée</p>
+        {% endif %}
         {{ include ("admin/actus/FormActu.html.twig", {form: form, button: 'Enregistrer'}) }}
     </div>
 
