hemato schéma therapeutique

--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -116,6 +116,10 @@ $kaki: rgb(180, 139, 10);
     transform: rotate(45deg);
 }
 
+#greffeArrow{
+    transform: rotate(45deg) translate(35%, -35%);
+}
+
 #logolbk{
     height: auto;
     width: 180px;
