--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -77,15 +77,17 @@
                             <p>Don conforme</p>
                             <img class="icon" src={{ asset ('img/icons/blood-bank.svg')}}>
                             <p>Stockage par la banque de sang placentaire</p>
-                            <i id="arrowConforme" class="fas fa-long-arrow-alt-right fa-4x"></i>
-                            <img class="icon" src={{ asset ('img/icons/hospitalisation.svg')}}>
-                            <p>Greffe hématopoïétique au patient</p>
+                            <i id="greffeArrow" class="fas fa-long-arrow-alt-right fa-4x"></i>
                         </div>
                         <div class="pasConforme">
                             <p>Don non conforme</p>
                             <img class="icon" src={{ asset ('img/icons/recycling-bin.svg')}}>
                             <p>Destruction de la poche de sang</p>
                         </div>
+                    </div>
+                    <div class="pasConforme">
+                        <img class="icon" src={{ asset ('img/icons/hospitalisation.svg')}}>
+                        <p>Greffe hématopoïétique au patient</p>
                     </div>
                 </div>
             </div>
