--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -85,15 +85,15 @@
         <h2>Un acte éthique</h2>
         <p class="TwoColumnsText">Conformément à notre <a href={{ asset ('EngagementLymphobank-2018-09-18.pdf')}} target="_blank" rel="noopener noreferrer">Charte d’engagement</a>, les bénéfices liés à la vente de produits issus de votre don seront totalement réinvestis dans le projet de recherche mené par Lymphobank et sans aucun profit personnel tel que versement de dividendes au fondateur, associés, investisseurs ou partenaires financiers de la société Lymphobank. 
         <br><br>
-        Respectueux de votre don, nous exerçons notre activité en toute transparence et sous le contrôle d’un Comité de Surveillance, constitué pour partie du Directeur de l’EFS-BFC, du Président de la Fédération Fran-çaise pour le Don de Sang Bénévole, d’un représentant de votre maternité disposant tous d’un accès aux résultats comptables et financiers de la société et pour validation du respect de nos engagements.
-        <br><br>
+        Respectueux de votre don, nous exerçons notre activité en toute transparence et sous le contrôle d’un Comité de Surveillance, constitué pour partie du Directeur de l’EFS-BFC, du Président de la Fédération Française pour le Don de Sang Bénévole, d’un représentant de votre maternité disposant tous d’un accès aux résultats comptables et financiers de la société et pour validation du respect de nos engagements.</p>
+        <p>
         De même, les utilisateurs finaux, à qui les éléments issus de votre don seront cédés par Lymphobank, s’engagent contractuellement à :
         <ul class="ethique">
         <li>à ne pas exporter ni recéder les produits issus d'éléments du corps humain cédés par Lymphobank à une tierce partie, que ce soit à titre gracieux ou à titre onéreux</li>
         <li>à utiliser les produits issus d'éléments du corps humain cédés par Lymphobank pour un usage de re-cherche uniquement et dans les domaines d'activités listés ci-dessus</li>
         <li>à avoir effectué les démarches réglementaires nécessaires à la réalisation de ses activités, notamment de déclaration ou d'autorisation préalable</li>
         </ul>
-        </p>
+        
     </div>
     
     
