--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -28,9 +28,53 @@
     - Plaquettes : elles aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour soigner des patients atteints de diverses maladies du sang.
     <br>
     Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. 
-    Le don de sang placentaire est un <span class="underline">acte indolore, gratuit, anonyme et volontaire</span>.
+    Le don de sang placentaire est un <span class="underline">acte indolore, gratuit, anonyme et volontaire</span>.  Il existe deux types de dons: pour un usage scientifique ou pour un usage thérapeutique.
     </p>
-
+    <h2>Le don de sang de cordon à usage scientifique</h2>
+    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/scientifique.jpeg')}}><p class="TwoColumnsText">Les maternités partenaires de Lymphobank proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
+    <br>
+    Donner son sang de cordon, c’est aider la recherche !
+    </p></div>
+    <div class="cardsHosto">
+        <div class="card">
+            <div class="card-pic">
+                <img src={{ asset ('img/icons/hospital.png')}}>
+            </div>
+            <div class="card-title"><h2>Prélèvement à usage scientifique </h2></div>
+            <button class="btnCard"><p>En savoir plus</p></button>
+            <div class="panelCard">
+                <div class="schemaCard">
+                    <img class="icon" src={{ asset ('img/icons/doctor.svg')}}>
+                    <h2>La maman est informée sur les usages du don</h2>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                    <img class="icon" src={{ asset ('img/icons/contract.svg')}}>
+                    <h2>La maman donne son consentement</h2>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                    <div class="prelevement">
+                        <img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
+                        <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                    </div>
+                    <h2>Le jour de l'accouchement :</h2>
+                    <ul class='accouchement'>
+                        <li>prise de sang à la maman</li>
+                        <li>recueil du sang de cordon</li>
+                    </ul>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                    <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
+                    <h2>Anonymisation du don par la banque de sang placentaire</h2>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                    <img id="logolbk" class="icon" src={{ asset ('img/icons/LogoLymphobank.png')}}>
+                    <h2>Traitement de la poche par Lymphobank</h2>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                    <img class="icon" src={{ asset ('img/icons/blood-sample.svg')}}>
+                    <h2>Stockage par Lymphobank</h2>
+                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
+                    <img class="icon" src={{ asset ('img/icons/laboratory.svg')}}>
+                    <h2>Utilisation par les laboratoires de recherche</h2>
+                </div>
+            </div>
+        </div>
+    </div>
     <h2>Le don du sang de cordon à usage thérapeutique </h2>
     <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/therapeutique.jpeg')}}><p class="TwoColumnsText">La plupart des maternités ne proposent pas de recueillir le sang de cordon : seules certaines maternités, agréées par le Ministère de la Santé, appartiennent au Réseau Français de Sang Placentaire et sont autorisées à prélever le sang de cordon pour un usage thérapeutique. Les dons de sang sont alors centralisés, traités et conservés en France au sein de quatre Banques de Sang Placentaire, dans l’attente de leur administration à un patient.
     <br>
@@ -89,51 +133,6 @@
                         <img class="icon" src={{ asset ('img/icons/hospitalisation.svg')}}>
                         <p>Greffe hématopoïétique au patient</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <h2>Le don de sang de cordon à usage scientifique</h2>
-    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/scientifique.jpeg')}}><p class="TwoColumnsText">Les maternités partenaires de Lymphobank proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
-    <br>
-    Donner son sang de cordon, c’est aider la recherche !
-    </p></div>
-    <div class="cardsHosto">
-        <div class="card">
-            <div class="card-pic">
-                <img src={{ asset ('img/icons/hospital.png')}}>
-            </div>
-            <div class="card-title"><h2>Prélèvement à usage scientifique </h2></div>
-            <button class="btnCard"><p>En savoir plus</p></button>
-            <div class="panelCard">
-                <div class="schemaCard">
-                    <img class="icon" src={{ asset ('img/icons/doctor.svg')}}>
-                    <h2>La maman est informée sur les usages du don</h2>
-                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-                    <img class="icon" src={{ asset ('img/icons/contract.svg')}}>
-                    <h2>La maman donne son consentement</h2>
-                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-                    <div class="prelevement">
-                        <img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
-                        <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-                    </div>
-                    <h2>Le jour de l'accouchement :</h2>
-                    <ul class='accouchement'>
-                        <li>prise de sang à la maman</li>
-                        <li>recueil du sang de cordon</li>
-                    </ul>
-                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-                    <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
-                    <h2>Anonymisation du don par la banque de sang placentaire</h2>
-                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-                    <img id="logolbk" class="icon" src={{ asset ('img/icons/LogoLymphobank.png')}}>
-                    <h2>Traitement de la poche par Lymphobank</h2>
-                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-                    <img class="icon" src={{ asset ('img/icons/blood-sample.svg')}}>
-                    <h2>Stockage par Lymphobank</h2>
-                    <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-                    <img class="icon" src={{ asset ('img/icons/laboratory.svg')}}>
-                    <h2>Utilisation par les laboratoires de recherche</h2>
                 </div>
             </div>
         </div>
